--- a/styles.css
+++ b/styles.css
@@ -66,10 +66,10 @@ a {
 }
 
 header {
-  position: fixed;
+  position: ;
   top: 0;
   width: 100%;
-  min-height: 20px;
+  height: 120px;
   padding: 0px 0px;
   display: flex;
   flex-direction: row;
